fixed image on mobile devices?

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,12 +62,21 @@ h2 {
 }
 
 #photo {
-	max-width: 25%;
-	position: absolute;
-	left: 83.5%;
-	top: 50%;
-	transform: translate(-50%, -50%);
+	width: 100px;
 }
+
+@media (min-width: 550px) {
+
+	#photo {
+		max-width: 25%;
+		position: absolute;
+		left: 83.5%;
+		top: 50%;
+		transform: translate(-50%, -50%);
+	}
+
+}
+
 
 .container {
 	width: 100% !important;
